--- a/chrome/public/index.html
+++ b/chrome/public/index.html
@@ -6,6 +6,6 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root">sdafasdkjkjdsafjkdsajkfadsjkkj</div>
+    <div id="root"></div>
   </body>
 </html>
