fix: TodoModal내 기능 구현함, 날짜저장하는 건 내일해야됨 -진현, 대형, 혜진-

--- a/chrome/public/index.html
+++ b/chrome/public/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <script src="./14d687cae1.js"></script>
+  <script src="https://kit.fontawesome.com/14d687cae1.js.js"></script>
   <div id="root"></div>
 </body>
 
