add: 로컬 스토리지 구현, CSS 초기 컨셉 레이아웃에 맞춰 구현 -정훈, 성훈, 소훈-

--- a/chrome/public/index.html
+++ b/chrome/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
+    <script
+      src="https://kit.fontawesome.com/14d687cae1.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root">sdafasdkjkjdsafjkdsajkfadsjkkj</div>
