fix: TodoElemnet내 수정/시계 아이콘 추가 -진현-

--- a/chrome/public/index.html
+++ b/chrome/public/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
+  <script src="./14d687cae1.js"></script>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>React App</title>
 </head>
 
 <body>
-  <script src="https://kit.fontawesome.com/14d687cae1.js.js"></script>
   <div id="root"></div>
 </body>
 
