--- a/chrome/public/index.html
+++ b/chrome/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <script src="./14d687cae1.js"></script>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
+  <title> Melting Brain </title>
 </head>
 
 <body>
